--- a/public/index.html
+++ b/public/index.html
@@ -62,6 +62,7 @@
             </div>
         </div>
         <div class="right-panel">
+            <h2>Try It Yourself</h2>
             <div class="options">
                 <a href="#" class="thumbnail" data-index="0">
                     <img class="thumbnails" src="images/before/1.jpg" alt="">
@@ -83,7 +84,10 @@
                 </a>
             </div>
             <div class="image-container">
-                <div id="mySlider"></div>
+                <span class="label before">Before</span>
+                <div id="mySlider">
+                </div>
+                <span class="label after">After</span>
             </div>
         </div>
     </div>
