replace supabase with google forms

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,6 @@
     <title>OIS.Gold: Exquisite Jewelry Imaging</title>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Raleway:wght@300;400;600&display=swap" rel="stylesheet">
     <link preload rel="stylesheet" href="style.css">
-    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <script src="https://cdn.jsdelivr.net/npm/before-after-slider@1.0.0/dist/slider.bundle.js"></script>
     <script src="index.js" defer></script>
 </head>
@@ -50,7 +49,7 @@
             </div>
             <div class="email-form">
                 <div class="stardust-container" id="stardustContainer"></div>
-                <form id="emailForm">
+                <form id="emailForm" onsubmit="submitToGoogleForm(event)">
                     <div class="input-group">
                         <input id="emailInput" type="email" placeholder="Enter your email for exclusive access" required>
                         <button type="submit">Join Waitlist</button>
@@ -91,5 +90,10 @@
             </div>
         </div>
     </div>
+
+    <script>
+        
+    </script>
 </body>
 </html>
+https://docs.google.com/forms/d/e/1FAIpQLSdTwgT5t26I1LWU6VKRnJr4nJR6d8p0phHE6D2z0IHNkhQPMA/viewform?embedded=true
